--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 
 <html>
    <head>
-      <title>change picture</title>
+      <title>Main Page</title>
 
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
       <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
@@ -53,7 +53,14 @@
         
         </div>
     </header>       
-    <button type="button" onclick="displayPreviousImage()">Previous</button>
-       <button type="button" onclick="displayNextImage()">Next</button>
+    
+    <i class="ion-arrow-left-b arrow-icon" onclick="displayPreviousImage()"></i>
+    <i class="ion-arrow-right-b arrow-icon" onclick="displayNextImage()"></i>
+
+    <button type="button" >Previous</button>
+    <button type="button" >Next</button>
+
+    <p class="ant">Hello</p>
+
    </body>
 </html>
