--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             <img src="image1.jpg" id="image-to-be-changed">
                         </div>
                         <div>
-                            <i class="ion-arrow-left-b arrow-icon"  onclick="displayPreviousImageTwo()"></i>
+                            <i class="ion-arrow-left-b arrow-icon" id="right-arrow-one" onclick="displayPreviousImageTwo()"></i>
                             <i class="ion-arrow-right-b arrow-icon" id="right-arrow-two" onclick="displayNextImageTwo()"></i>
                         </div>
                         
