--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
     
 
-      <style type="text/css">
+    <style type="text/css">
         #img{
-          width: 100%;
-          height: 100vh;
+            width: 100%;
+            height: 100vh;
         }
-      </style>
+    </style>
 
     <style type="text/css">
       #site-header{
@@ -106,6 +106,18 @@
         
         </div>
     </header> 
+
+
+    <section id="intro" class="section">
+        <div class="container">
+            <h1>The header</h1>
+            <h2>The SubHeader</h2>
+
+            <p>Text</p>
+            <p>More Text</p>
+            <p>More Text</p>
+        </div>
+    </section>
 
 
     <!-- <section id="new">
