--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
     <section id="services">
         <div id="banner-bg">
             <div class="container">
+                <div style="color: white; font-size: 30px;">
+                    <strong>What Can We Do For You?</strong>
+                </div>
                 <div class="row">
                     <div class="col-sm-4 service-icon-holder">
                         <i class="ion-plane"></i>
