changing the navbar in  next commit. This is fallback!

--- a/index.html
+++ b/index.html
@@ -62,16 +62,11 @@
             </ul>
             
             <ul class="nav navbar-nav navbar-right">
+                <li><a data-scroll href="#site-header">Home</a></li>
                 <li><a data-scroll href="#about">About</a></li>
                 <li><a data-scroll href="#new">What's New?</a></li>
-                <li><a data-scroll href="#speakers">Speakers</a></li>              
-                <li><a data-scroll href="#schedule">Schedule</a></li>                  
-                <!-- <li><a data-scroll href="#partner">Partner</a></li>                   -->
-                <!-- <li><a data-scroll href="#">Sponsorship</a></li> -->
-                <li><a data-scroll href="#faq">FAQ</a></li>
-                <li><a data-scroll href="#photos">Photos</a></li>
-                <li><a data-scroll href="#register">Register</a></li>
-                <li><a data-scroll href="#location">Locate Us</a></li>
+                <li><a data-scroll href="#services">Services</a></li>
+                <li><a data-scroll href="#contact">Contact Us</a></li>
 
 
 <!-- 
