changing the navbar in  next commit. This is fallback!

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <title>Events&Byond</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> 
+
     <!-- css -->
     <!-- <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -40,7 +42,7 @@
 
     <!-- ----------  NAVBAR  ----------- -->
 
-      <nav class="navbar navbar-default navbar-fixed-top" style="margin-bottom: 0px">
+      <nav class="navbar navbar-inverse navbar-fixed-top transparent" style="margin-bottom: 0px">
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
@@ -137,7 +139,15 @@
         
     </section> -->
 
-    <section id="about" class="section about">
+    <section id="about" class="section about" >
+        <div class="container">
+            <p>We are a <strong>youth run start-up</strong> organization in India with <strong>student body entities</strong> in process of expanding across major cities in India. We have one such <strong>established entity in Kolkata, West Bengal</strong> which is fully functional now.</p>
+
+            <p>The Kolkata entity is also our flagship entity among <strong>many more coming up soon!</strong> At present we aim to successfully <strong>build a strong network of entities across cities</strong> to help us expand our impact. With the help of our entities we <strong>organize various events</strong> like workshops, summits, meetups, etc.</p>
+        </div>
+    </section>
+
+    <section id="what?" class="section about">
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-sm-2 ">
