changing the navbar in  next commit. This is fallback!

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- ----------  NAVBAR  ----------- -->
 
-      <nav class="navbar navbar-inverse navbar-fixed-top transparent" style="margin-bottom: 0px">
+      <nav id="site-nav" class="navbar navbar-inverse navbar-fixed-top mynavbar transparent" style="margin-bottom: 0px">
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
@@ -53,7 +53,7 @@
               <span class="icon-bar"></span>
             </button>
             <!-- <a class="navbar-brand" href="#"><img id="logo" src="https://image.flaticon.com/icons/svg/61/61624.svg"></img></a> -->
-            <a class="navbar-brand" href="#">EVENTS&BYOND</a>
+            <a class="navbar-brand" href="#"><strong>EVENTS&BYOND</strong></a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -177,7 +177,7 @@
     </section>
     
 
-    <section id="services">
+    <section id="services" class="section services">
         <div id="banner-bg">
             <div class="container">
                 <div style="color: white; font-size: 30px; margin-top: 30px;">
