horizontal bar okay

--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-
-                    col1afkldjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjadsfkjaldkfjakldfjakldjf klsdfiadsfilsa dc asdfchsd hfcahsd fckjahs ch asjkdcfh asdf haskhf cakjhd fjahdfj ajh fkahs fkh askjfh akshf  a sdkjfh asdkhfasduhfsdhfjjasdkfljadsfj alidjif jakdljfklajasdfkjl;kjasdf;lkjadsfl;kjasdf;lkajdsf laskdjf lkajsd flkjasdfl kajsdf jasdfkj asldkfl kjadslkfjl kdjasf kjkl ajdsjf jalsdjf j a j asdjf ajdflj a;lkdsjf; aldkjf; alkjkfl jadljf akdjsf jds afklj;asdlkjf aklsd f kkldsjf jadjfkja;ljfljsdiofjaioewio jaiosdufawoi fe;idojf jjkj ljslaidufia; oifj;oaisdj fii;asdfj a;wfosajd ;fija;iwof
+                    Events and Byond is a thriving entrepreneurial venture dedicated to utilizing the extensive power of the youth to meet the objectives. Our core competency lies in planning and execution mix which includes organizing events, youth connects, conferences, workshops, leadership summits and various youth empowerment programmes and projects,social media and on ground campaigns, videos and content, maintaining relationships online, reaching out to target specific audience, integrating offline goals with online marketing and measuring ROI. Events and Byond prides itself with a small and crisp team of young professionals from diverse backgrounds who can bring fresh ideas and perspective to the table. 
                 </div><!-- /.col-sm-4 -->
 
                 <div class="col-sm-1"></div>
