--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div>
     </header> 
 
-
+<!-- 
     <section id="intro" class="section">
         <div class="container">
             <h1>The header</h1>
@@ -131,7 +131,7 @@
             <p>More Text</p>
             <p>More Text</p>
         </div>
-    </section>
+    </section> -->
 
 
     <!-- <section id="new">
@@ -147,16 +147,26 @@
         </div>
     </section>
 
-    <section id="what?" class="section about">
+    <section id="whats-new">
+        
+    </section>
+
+    <section id="our-story" class="section about">
         <div class="container">
             <div class="row no-gutters">
-                <div class="col-sm-2 ">
+                <div class="col-sm-1 ">
                     <div style="border: 2px solid black;">
                         space for social links
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    Events and Byond is a thriving entrepreneurial venture dedicated to utilizing the extensive power of the youth to meet the objectives. Our core competency lies in planning and execution mix which includes organizing events, youth connects, conferences, workshops, leadership summits and various youth empowerment programmes and projects,social media and on ground campaigns, videos and content, maintaining relationships online, reaching out to target specific audience, integrating offline goals with online marketing and measuring ROI. Events and Byond prides itself with a small and crisp team of young professionals from diverse backgrounds who can bring fresh ideas and perspective to the table. 
+                <div class="col-sm-5">
+
+                    <h2>Our Story</h2>
+
+                    <p>
+                        Events and Byond is a thriving entrepreneurial venture dedicated to utilizing the <strong>extensive power of the youth</strong> to meet the objectives. Our core competency lies in planning and execution mix which includes organizing events, youth connects, conferences, workshops, leadership summits and various youth <strong>empowerment programmes</strong> and projects,social media and on ground campaigns, videos and content, maintaining relationships online, reaching out to target <strong>specific audience, integrating offline goals with online marketing and measuring ROI</strong>. Events and Byond prides itself with a small and crisp team of young professionals from diverse backgrounds who can bring fresh ideas and perspective to the table.
+                    </p>
+                     
                 </div><!-- /.col-sm-4 -->
 
                 <div class="col-sm-1"></div>
@@ -236,7 +246,7 @@
                     <p class="site-info">No rights reserved <br> by <a href="http://abhishekmadhu.github.io">Abhishek Madhu</a></p>
                     <ul class="social-block">
                         <li><a href=""><i class="ion-social-twitter"></i></a></li>
-                        <li><a href=""><i class="ion-social-facebook"></i></a></li>
+                        <li><a href="https://www.facebook.com/EventsAndByond/"><i class="ion-social-facebook"></i></a></li>
                         <li><a href=""><i class="ion-social-linkedin-outline"></i></a></li>
                         <li><a href=""><i class="ion-social-googleplus"></i></a></li>
                     </ul>
