--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
     <section id="our-story" class="section about">
         <div class="container">
             <div class="row no-gutters">
-                <div class="col-sm-1 ">
+                <!-- <div class="col-sm-1 ">
                     <div style="border: 2px solid black;">
                         space for social links
                     </div>
-                </div>
-                <div class="col-sm-5">
+                </div> -->
+                <div class="col-sm-6">
 
                     <h2>Our Story</h2>
 
