--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         
     </section>
 
-    <section id="our-story" class="section about">
+    <section id="our-story" class="section our-story">
         <div class="container">
             <div class="row no-gutters">
                 <!-- <div class="col-sm-1 ">
