--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
     <section id="our-story" class="section our-story">
         <div class="container">
-            <div class="row no-gutters">
+            <div class="row">
                 <!-- <div class="col-sm-1 ">
                     <div style="border: 2px solid black;">
                         space for social links
