smooth scrolling finally appears!

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- css -->
     <!-- <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"> -->
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
@@ -164,7 +165,7 @@
                         space for social links
                     </div>
                 </div> -->
-                <div class="col-sm-6">
+                <div class="col-sm-3">
 
                     <h2>Our Story</h2>
 
@@ -173,6 +174,8 @@
                     </p>
                      
                 </div><!-- /.col-sm-4 -->
+
+                
 
                 <div class="col-sm-1"></div>
 
@@ -271,6 +274,7 @@
 
     <script src="assets/js/main.js"></script>
     <script src="assets/js/other.js"></script>
+    <script type="text/javascript" src="bower_components/smooth-scroll/dist/js/smooth-scroll.js"></script>
 
 </body>
 </html>
