Script addded for dropdown

--- a/index.html
+++ b/index.html
@@ -275,6 +275,17 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/other.js"></script>
     <script type="text/javascript" src="bower_components/smooth-scroll/dist/js/smooth-scroll.js"></script>
+		
+	
+   <script type="text/javascript">
+    	function funin(){
+		document.getElementById('sm').style.display = "block";
+    }
+	function funout(){
+		document.getElementById('sm').style.display = "none";
+		}
+    </script>
+
 
 </body>
 </html>
