--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     <ul class="social-block">
                         <li><a href=""><i class="ion-social-twitter"></i></a></li>
                         <li><a href="https://www.facebook.com/EventsAndByond/"><i class="ion-social-facebook"></i></a></li>
-                        <li><a href=""><i class="ion-social-linkedin-outline"></i></a></li>
+                        <li><a href="https://www.linkedin.com/company/events-byond/"><i class="ion-social-linkedin-outline"></i></a></li>
                         <li><a href=""><i class="ion-social-googleplus"></i></a></li>
                     </ul>
                 </div>
@@ -264,7 +264,7 @@
     </footer>
 
 
-
+https://www.linkedin.com/company/events-byond/
 
     <!-- script -->
     
