trying to fix navbar transparency next. fallback here for emergency.

--- a/index.html
+++ b/index.html
@@ -171,8 +171,11 @@
     <section id="our-story" class="section our-story">
         <div class="container">
             <div class="row">
-                <div class="col">
-                    <h2>Our Story</h2>
+                <div class="col-sm-1">
+
+                </div>
+                <div id="our-story-heading" class="col">
+                    <p>Our Story</p>
                 </div>
             </div>
             <div class="row">
@@ -189,7 +192,7 @@
 
                 <div class="col-sm-5">
                     <div class="scrolling-image-gallery">
-                        <img src="image1.jpg" id="image-to-be-changed">
+                        <img src="assets/images/ourstory/image1.jpg" id="image-to-be-changed">
                     </div>
                     <!-- <div>
                         <i class="ion-arrow-left-b arrow-icon" id="right-arrow-one" onclick="displayPreviousImageTwo()"></i>
