changing banner and adding contactus

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <li><a data-scroll href="#about">About</a></li>
                 <li><a data-scroll href="#services">Services</a></li>
                 <li><a data-scroll href="#whats-new">What's New</a></li>
-                <li><a data-scroll href="#contact">Contact Us</a></li>
+                <li><a data-scroll href="#contact-us">Contact Us</a></li>
 
 
 <!-- 
@@ -114,9 +114,9 @@
             <div id="salutation">
 
                 <a href="#about">
-                    <button class="btn buttonstyle2">About Us</button>
+                    <button class="btn buttonstyle2 samebutton">About Us</button>
                 </a>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdUB16k2mm1O5E23U6tze5Y3Mp2g0IgVPlUzLUhe52ywqNr9Q/viewform"><button class="btn buttonstyle2">Join Us</button></a>    
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdUB16k2mm1O5E23U6tze5Y3Mp2g0IgVPlUzLUhe52ywqNr9Q/viewform"><button class="btn buttonstyle2 samebutton">Join Us</button></a>    
             </div>
         
         </div>
@@ -304,7 +304,7 @@
     </section>
 
 
-    <section id="contact-us">
+    <section id="contact-us" class="section contact-us">
         <div class="container">
             <div id="contact-us-header">
                 Contact Us    
