final signoff commit

--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
 
 
     <section id="whats-new" class="whats-new">
+        <a href="abhishekmadhu.github.io">
         <div class="container">
             <div class="row">
                 <!-- <div class="col-sm-1">
@@ -296,11 +297,12 @@
                     
                 </div> -->
                 <div class="col event-links">
-                    <a href="">Upcoming Events</a>
+                    <!-- <a href=""> -->Upcoming Events<!-- </a> -->
                 </div>
 
             </div>
         </div>
+        </a>
     </section>
 
 
@@ -348,7 +350,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <p class="site-info">No rights reserved <br> by <a href="http://abhishekmadhu.github.io">Abhishek Madhu</a></p>
+                    <p class="site-info">All rights reserved by<br><a href="http://abhishekmadhu.github.io">Web Developement Team</a></p>
                     <ul class="social-block">
                         <li><a href=""><i class="ion-social-twitter"></i></a></li>
                         <li><a href="https://www.facebook.com/EventsAndByond/"><i class="ion-social-facebook"></i></a></li>
