--- a/index.html
+++ b/index.html
@@ -375,12 +375,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <p class="site-info">All rights reserved by<br><a href="http://abhishekmadhu.github.io">Web Developement Team</a></p>
+                    <p class="site-info">All Rights Reserved By<br><a href="http://abhishekmadhu.github.io">Events & Byond</a></p>
                     <ul class="social-block">
                         <!-- <li><a href=""><i class="ion-social-twitter"></i></a></li> -->
                         <li><a href="https://www.facebook.com/EventsAndByond/"><i class="ion-social-facebook"></i></a></li>
                         <li><a href="https://www.linkedin.com/company/events-byond/"><i class="ion-social-linkedin-outline"></i></a></li>
-                        <!-- <li><a href=""><i class="ion-social-googleplus"></i></a></li> -->
+                        <!-- <li><a href=""><i class="ion-social-googleplus"></i></a></li> --> 
                     </ul>
                 </div>
             </div>
