fixed color error in services section

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     <div class="col">
                         <div style="font-size: 30px; margin-top: 30px;">
                             <div class="container" >
-                                <h1 style="font-family: Montserrat"><strong>Our Design Process</strong>	</h1>
+                                <h1 style="font-family: Montserrat; color: black;"><strong>Our Design Process</strong>	</h1>
                             </div>
                             
                         </div>
