Added FB link to Upcoming Event

--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@
                     
                 </div> -->
                 <div class="event-links">
-                    <!-- <a href=""> -->>>> Upcoming Events <<<<!-- </a> -->
+                    <a href="https://www.facebook.com/EventsAndByond/">>>> Upcoming Events <<<</a> 
                 </div>
 
-            <!-- </div> -->
+            <!-- </div>
         </div>
         </a>
     </section>
